Fix scrollbar jumps when content is higher than screen (#2237)

--- a/core/scss/layout/_root.scss
+++ b/core/scss/layout/_root.scss
@@ -3,6 +3,10 @@
   font-size: 16px;
   height: 100%;
 
+  @include media-breakpoint-up(lg) {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
 }
 
 :root,
